syntax="proto3";

option go_package= "microsrvhttpinproto/userservice";

package srv;

message UserRequest {
    int32 id = 1;
}

message UserResponse{
    int32 id = 1;
    string name =2;

}

service UserService {
    rpc GetUser(UserRequest) returns(UserResponse);
}